initialize firebase into our project

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "eslint-plugin-import/no-extraneous-dependencies":"off"
   }
 }
